<resources>
    <string name="app_name">PlayingWithNavigationDrawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_show">ShowActivity</string>

    <string name="your_collection">Your collection</string>
    <string name="your_watchlist">Your watchlist</string>
    <string name="discover_new_movies">New movies</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_title">movie title</string>


    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="settings">Settings</string>
    <string name="settings_header">Settings</string>
    <string name="lists">Lists</string>
    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="title_activity_lists">Lists</string>
</resources>
