<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shows"
            android:icon="@drawable/ic_tv_white_24dp"
            android:title="@string/shows" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movie_creation_white_24dp"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/lists" />
        <item
            android:id="@+id/nav_shows2"
            android:icon="@drawable/ic_tv_white_24dp"
            android:title="@string/shows" />
        <item
            android:id="@+id/nav_movies2"
            android:icon="@drawable/ic_movie_creation_white_24dp"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_lists2"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/lists" />
        <item
            android:id="@+id/nav_shows3"
            android:icon="@drawable/ic_tv_white_24dp"
            android:title="@string/shows" />
        <item
            android:id="@+id/nav_movies3"
            android:icon="@drawable/ic_movie_creation_white_24dp"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_lists3"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/lists" />
    </group>

    <item android:title="@string/settings_header">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help_feedback"
                android:icon="@drawable/ic_live_help_white_24dp"
                android:title="@string/help_feedback" />
        </menu>
    </item>

</menu>
